// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Video Cover matches the snapshot 1`] = `
.c8 {
  width: 32px;
  height: 32px;
}

.c9 a {
  color: white;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 {
  background: url(https://artsy-vanity-files-production.s3.amazonaws.com/images/galerie-ceysson-benetiere_abmb.jpg) no-repeat center center;
  background-size: cover;
  background-color: black;
}

.c4 {
  background: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.6));
}

.c6 {
  box-sizing: border-box;
  z-index: 1;
}

.c6 .c7 {
  height: 60px;
  width: 44px;
  cursor: pointer;
}

.c0 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  color: white;
  opacity: 1;
  visibility: visible;
  -webkit-transition: opacity 0.25s ease,visibility 0.25s ease;
  transition: opacity 0.25s ease,visibility 0.25s ease;
}

.c0 .c1,
.c0 .c3,
.c0 .c5 {
  position: absolute;
  width: 100%;
  height: 100%;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
    src="https://artsy-vanity-files-production.s3.amazonaws.com/images/galerie-ceysson-benetiere_abmb.jpg"
  />
  <div
    className="c3 c4"
  />
  <div
    className="c5 c6 sc-ifAKCX heICHz"
  >
    <div
      className="sc-kAzzGY jWPSYA"
    >
      <div
        className="sc-ifAKCX htzdbN"
      >
        <div
          className="sc-kAzzGY iQaGQD"
          onClick={[Function]}
          width="60px"
        >
          <svg
            className="c7 c8"
            version="1.1"
            viewBox="0 0 40 56"
            x="0px"
            xmlns="http://www.w3.org/2000/svg"
            y="0px"
          >
            <g
              fill="none"
              fillRule="evenodd"
              stroke="none"
              strokeWidth="1"
            >
              <polygon
                fill="white"
                points="0 0 0 56 39.3600006 28"
              />
            </g>
          </svg>
        </div>
        <div
          className="sc-kAzzGY eEGgS"
        >
          <div>
            <div
              className="sc-ifAKCX htzdbN"
            >
              <div
                className="c9 sc-bZQynM bOrPFB sc-EHOje girjXe"
                fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
                fontSize="14px"
              >
                Future of Art
              </div>
              <div
                className="sc-bZQynM bOrPFB sc-EHOje CMaEi"
                fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
                fontSize="14px"
              >
                02:28
              </div>
            </div>
            <div
              className="sc-bZQynM bOrPFB sc-EHOje BRZmD"
              fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
              fontSize="42px"
            >
              Trevor Paglan
            </div>
          </div>
        </div>
      </div>
      <div
        className="sc-kAzzGY kccIrc"
      >
        <div
          className="sc-gzVnrw ibZhkv sc-EHOje evsrro"
          fontFamily="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
          fontSize={
            Array [
              "18px",
              "22px",
              "22px",
              "22px",
            ]
          }
        >
          The elegant spiral of the Nautilus shell, the sinuous pattern of the banks of a river, or the swirling vortex street of clouds - patterns exist.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Video Cover matches the snapshot with edit props 1`] = `
.c8 {
  width: 32px;
  height: 32px;
}

.c9 a {
  color: white;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 {
  background: url(https://artsy-vanity-files-production.s3.amazonaws.com/images/galerie-ceysson-benetiere_abmb.jpg) no-repeat center center;
  background-size: cover;
  background-color: black;
}

.c4 {
  background: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.6));
}

.c6 {
  box-sizing: border-box;
  z-index: 1;
}

.c6 .c7 {
  height: 60px;
  width: 44px;
  cursor: pointer;
}

.c0 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  color: white;
  opacity: 1;
  visibility: visible;
  -webkit-transition: opacity 0.25s ease,visibility 0.25s ease;
  transition: opacity 0.25s ease,visibility 0.25s ease;
}

.c0 .c1,
.c0 .c3,
.c0 .c5 {
  position: absolute;
  width: 100%;
  height: 100%;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
    src="https://artsy-vanity-files-production.s3.amazonaws.com/images/galerie-ceysson-benetiere_abmb.jpg"
  />
  <div
    className="c3 c4"
  />
  <div
    className="c5 c6 sc-ifAKCX heICHz"
  >
    <div
      className="sc-kAzzGY jWPSYA"
    >
      <div
        className="sc-ifAKCX htzdbN"
      >
        <div
          className="sc-kAzzGY iQaGQD"
          onClick={[Function]}
          width="60px"
        >
          <svg
            className="c7 c8"
            version="1.1"
            viewBox="0 0 40 56"
            x="0px"
            xmlns="http://www.w3.org/2000/svg"
            y="0px"
          >
            <g
              fill="none"
              fillRule="evenodd"
              stroke="none"
              strokeWidth="1"
            >
              <polygon
                fill="white"
                points="0 0 0 56 39.3600006 28"
              />
            </g>
          </svg>
        </div>
        <div
          className="sc-kAzzGY eEGgS"
        >
          <div>
            <div
              className="sc-ifAKCX htzdbN"
            >
              <div
                className="c9 sc-bZQynM bOrPFB sc-EHOje girjXe"
                fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
                fontSize="14px"
              >
                Future of Art
              </div>
              <div
                className="sc-bZQynM bOrPFB sc-EHOje CMaEi"
                fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
                fontSize="14px"
              >
                02:28
              </div>
            </div>
            <div
              className="sc-bZQynM bOrPFB sc-EHOje BRZmD"
              fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
              fontSize="42px"
            >
              <div>
                Child 
                title
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="sc-kAzzGY kccIrc"
      >
        <div
          className="sc-gzVnrw ibZhkv sc-EHOje evsrro"
          fontFamily="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
          fontSize={
            Array [
              "18px",
              "22px",
              "22px",
              "22px",
            ]
          }
        >
          <div>
            Child 
            description
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
